samples/_failures_safe/1761506466_fc31b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51b2dd18.c: In function ‘main’:
./samples/SAFE/__tmp_51b2dd18.c:126:44: error: expected ‘)’ at end of input
  126 |             if (scanf("%d", &matrix2[i][j])
      |                ~                           ^
      |                                            )
./samples/SAFE/__tmp_51b2dd18.c:126:13: error: expected declaration or statement at end of input
  126 |             if (scanf("%d", &matrix2[i][j])
      |             ^~
./samples/SAFE/__tmp_51b2dd18.c:126:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_51b2dd18.c:126:13: error: expected declaration or statement at end of input
